2020-06-06  Vincent Bela\"iche  <vincent.belaiche@gmail.com>

	* xtpipes.tex (End document system call): Remove
	-Xlint:deprecation from javac call.
	(<xtpipes imports>): Add xtpipes.XtpipesPrintWriter import.
	(<process script map>, <<set start element>, <save status of xmlns
	above element>): Replace deprecated Integer/Boolean allocation with
	new by call to static member function valueOf.

2020-06-06  Karl Berry  <karl@freefriends.org>

	* Makefile: use htlatex instead of xhlatex throughout.
	https://tug.org/pipermail/tex4ht/2020q2/002579.html

	(diff-ht-fonts): more tweaks on the road to making the output more
	easily usable.

	(SearchFonts.java): disable dependency.
	* tex4ht-fonts-noncjk.tex: document Michal's idea about about it.
	https://tug.org/pipermail/tex4ht/2020q2/002578.html

2020-06-05  Karl Berry  <karl@freefriends.org>

	* tex4ht-javahelp-xtpipes.tex: \input{tex4ht-dir}.

2020-06-05  Vincent Bela\"iche  <vincent.belaiche@gmail.com>

	* tex4ht-javahelp-xtpipes.tex,
	* tex4ht-html-speech-xtpipes.tex: Remove reference to \XTPIPES lib

2020-06-05  Karl Berry  <karl@freefriends.org>

	* Makefile (do_java): conditional to enable Java derivations
	and compilations.
	* Makefile.exp: move "experimental section" to here from Makefile.

2020-06-05  Vincent Bela\"iche  <vincent.belaiche@gmail.com>

	* tex4ht-docbook-xtpipes.tex,
	* tex4ht-javahelp-xtpipes.tex,
	* tex4ht-jsml-xtpipes.tex,
	* tex4ht-oo-xtpipes.tex,
	* tex4ht-xhtml-xtpipes.tex,
	* tex4ht-xhtmml-xtpipes.tex: Replace absolute paths by macros
	from tex4ht-dir.tex.

	* tex4ht-html-speech-xtpipes.tex: Likewise replace absolute paths,
	and ensure directory \TEXMFTEXivBIN exists.

	* xtpipes.tex: Likewise replace absolute paths, and
	change system calls so that javac input files are streamed from find.

2020-06-04 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-modern.tex: removed lot of duplicated .htf entries.
	* tex4ht-fonts-modern.tex (txbtt8v, txbttsc8v, txbttsl8v, txtt8v, txttsc8v,